great update with homepage and theme layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: 'Explore Infinity'
+subheading: 'Beyond the Horizon'
 banner: 'default'
 ---
 
