--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,6 @@
     </main>
 
     {%- include views/footer.html -%}
-
+    {% include link-previews.html wrapperQuerySelector="content" %}
   </body>
 </html>
